# api/routes/admin/user_route.go
@@ -24,7 +24,10 @@ func NewUserRouter(env *bootstrap.Env, timeout time.Duration, group *gin.RouterG
 		UserService: uu,
 		Env:         env,
 	}
+	group.POST("/users", fc.CreateUser)
 	group.GET("/users", fc.GetUserDetail)
 	group.PUT("/users/status", fc.ChangeStatus)
 	group.GET("/users/employees", fc.GetAllEmployee)
+	group.PUT("/users/employees", fc.UpdateEmployee)
+	group.DELETE("/users/employees/:id", fc.DeleteEmployee)
 }
